@@ -1,74 +1,64 @@
-import java.io.FileReader;
-import java.io.FileWriter;
-import java.util.Arrays;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.Scanner;
+import java.util.stream.Collectors;
 
 public class Decipher {
-    private static final List<Character> ALPHABET = Arrays.asList('а', 'б', 'в',
+    private static final List<Character> ALPHABET = List.of('а', 'б', 'в',
             'г', 'д', 'е', 'ж', 'з', 'и', 'к', 'л', 'м', 'н', 'о', 'п', 'р', 'с', 'т', 'у',
-            'ф', 'х', 'ц', 'ч', 'ш', 'щ', 'ъ', 'ы', 'ь', 'э', 'я', '.', ',', '«', '»',
-            ':', '!', '?', ' ', '0', '1', '2', '3', '4', '5', '6', '7', '8', '9');
+            'ф', 'х', 'ц', 'ч', 'ш', 'щ', 'ъ', 'ы', 'ь', 'э', 'я',
+            'А', 'Б', 'В', 'Г', 'Д', 'Е', 'Ж', 'З', 'И', 'К', 'Л', 'М', 'Н', 'О', 'П', 'Р', 'С', 'Т', 'У',
+            'Ф', 'Х', 'Ц', 'Ч', 'Ш', 'Щ', 'Ъ', 'Ы', 'Ь', 'Э', 'Я',
+            '.', ',', '«', '»', ':', '!', '?', ' ', '0', '1', '2', '3', '4', '5', '6', '7', '8', '9');
 
-
-
-    public static void decipher() throws Exception {
+    public static void decryption() throws IOException {
         Scanner scanner = new Scanner(System.in);
         System.out.println("Enter the key");
         int key = scanner.nextInt();
-        String inn = "D:\\IT\\Chifr\\astana.txt";
-        String outt = "D:\\IT\\Chifr\\shymkent.txt";
 
+        String inn = "src\\Resources\\arman.txt";
+        String out = "src\\Resources\\shymkent.txt";
 
-        try (
-                FileReader reader = new FileReader(inn);
-                FileWriter writer = new FileWriter(outt)) {
-            while (reader.ready()) {
-                char ch = (char) reader.read();
-                List<Character> list = Arrays.asList(Character.valueOf(ch));
-                for (Character str : list) {
-                    for (Character sym : ALPHABET) {
-                        if (str == Character.toUpperCase(str)) {
-                            if (Character.toLowerCase(str) == Character.toLowerCase(sym)) {
-                                int index = ALPHABET.indexOf(sym) - key;
-                                if (index < 0) {
-                                    int indexx = index + ALPHABET.size();
-                                    Character getSymbol = ALPHABET.get(indexx);
-                                    Character gett = Character.toUpperCase(getSymbol);
-                                    writer.write(gett);
+        Path inputPath = Paths.get(inn);
+        Path outputPath = Paths.get(out);
 
-                                } else  {
-                                    Character aa = ALPHABET.get(index);
-                                    Character bb = Character.toUpperCase(aa);
-                                    writer.write(bb);
+        List<String> lines = Files.readAllLines(inputPath, StandardCharsets.UTF_8);
+        List<String> decryptedLines = lines.stream()
+                .map(line -> decryptedLine(line, key))
+                .collect(Collectors.toList());
 
-                                }
-                            }else if(!ALPHABET.contains(Character.toLowerCase(str))) {
-                                writer.write(str);
-                                break;
-                            }
-                        }else if (Character.toLowerCase(str) == Character.toLowerCase(sym)) {
-                            int indext = ALPHABET.indexOf(sym) - key;
-                            if (indext < 0) {
-                                int indexx = indext + ALPHABET.size();
-                                Character getSymbol = ALPHABET.get(indexx);
-                                writer.write(getSymbol);
-                            } else {
-                                Character aa = ALPHABET.get(indext);
-                                writer.write(aa);
-                            }
+        Files.write(outputPath, decryptedLines, StandardCharsets.UTF_8);
+    }
 
+    static String decryptedLine(String line, int key) {
+        StringBuilder decryptedLine = new StringBuilder();
 
-                        }else if(!ALPHABET.contains(str)){
-                            writer.write(str);
-                            break;
-                        }
-
-                    }
-
-                }
+        for (char symbolForEncryption : line.toCharArray()) {
+            if (ALPHABET.contains(symbolForEncryption)) {
+                char decryptedChar = decryptChar(symbolForEncryption, key);
+                decryptedLine.append(decryptedChar);
+            } else {
+                decryptedLine.append(symbolForEncryption);
             }
+        }
+        return decryptedLine.toString();
+    }
 
+    private static char decryptChar(char symbolForEncryption, int key) {
+        int index;
+        int encryptedSymbolIndex = ALPHABET.indexOf(symbolForEncryption) - key;
+        if (encryptedSymbolIndex < 0) {
+            encryptedSymbolIndex = encryptedSymbolIndex + ALPHABET.size();
+            Character decryptedSymbol = ALPHABET.get(encryptedSymbolIndex);
+            return decryptedSymbol;
+        } else {
+            Character symbol = ALPHABET.get(encryptedSymbolIndex);
+            return symbol;
         }
     }
+
 }
